# tidyfile

./: README.md  pyproject.toml  test.json
src/tidyfile/: __init__.py  format.py  main.py
src/tidyfile/modules/: exporter.py  file_classifier.py  file_exporter.py  file_organiser.py  formatter.py
src/tidyfile/utils/: logger_setup.py
