[project]
name = "tidyfile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heshinth", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tidyfile = "tidyfile:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
