[project]
name = "tidyfile"
version = "0.1.0"
description = "A CLI tool to sort your files into organized directories."
readme = "README.md"
authors = [
    { name = "Heshinth", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
tidyfile = "tidyfile.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
